# ml-archer

./: .gitlab-ci.yml  README.md  hooks.json  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  formal-bundle.yml
commands/: bootstrap-proofs.md  bootstrap-toolchain.md  eml-verify.md  recheck-architecture.md  review-architecture.md  setup-plugin.md
demo_tomography_output/: report.md
examples/: run_demo_review.py  run_demo_tomography.py
examples/demo-review/: architecture_notes.md  evidence.json  report.md
examples/demo-tomography/: report.md  session_log.json  tomography.json
examples/experimental/: hooks.json
fixtures/review-architecture/: evidence.json  report.md
ml_archer/: __init__.py  cli.py
ml_archer/formal/: __init__.py  artifact_bundle_service.py  bootstrap_proofs.py  bootstrap_toolchain.py  build_bundle.py  doctor.py  doctor_service.py  install_bundle.py  lean_check.py  setup.py  (+4 more)
references/: architecture_contract.md  claim_extraction_rules.md  formal_mathlib_scope.md  formal_verification_contract.md  mathlib_scope.md  matrix_legend.md  tomography_contract.md  tomography_scope.md
scripts/: archer.py  bootstrap_proofs.py  bootstrap_toolchain.py  common.py  doctor.py  lean_check.py  post_write_mathlib_audit_check.ps1  search_mathlib.py  setup_plugin.py  validate_tomography_bundle.py
tests/: conftest.py  test_bootstrap_proofs.py  test_bootstrap_toolchain.py  test_common.py  test_doctor.py  test_eml_cli.py  test_script_entrypoints.py  test_setup_plugin.py  test_validate_artifact_bundle.py  test_validate_tomography_bundle.py
(+30 files in other folders)
